--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               id="url"
               readonly
               value=""
-              placeholder="google.com"
+              placeholder="Choose your social media icon"
             />
             <button id="btn">Copy</button>
           </div>
