--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <div class="card">
           <h1>Share this Challenge</h1>
           <div class="social-media">
-            <button value="twitter" class="icon">
+            <button class="icon">
               <i class="lni lni-twitter"></i></button
-            ><button value="linkedin" class="icon">
+            ><button class="icon">
               <i class="lni lni-linkedin-original"></i></button
-            ><button value="facebook" class="icon">
+            ><button class="icon">
               <i class="lni lni-facebook"></i></button
-            ><button value="instagram" class="icon">
+            ><button class="icon">
               <i class="lni lni-instagram"></i></button
-            ><button value="pinterest" class="icon">
+            ><button class="icon">
               <i class="lni lni-pinterest"></i></button
-            ><button value="telegram" class="icon">
+            ><button class="icon">
               <i class="lni lni-telegram-original"></i>
             </button>
           </div>
