--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <button id="btn">Copy</button>
           </div>
         </div>
-        <footer>
+        <div class="credit">
           Challenge from
           <a href="https://frontendpro.dev">FrontendPro</a> .Coded by
           <a href="https://github.com/triosp">M. Trio Saputra</a>
-        </footer>
+        </div>
       </div>
     </section>
 
